--- a/css/main.css
+++ b/css/main.css
@@ -571,11 +571,110 @@ product-info
  products styles
  ================== */
 
-.shopping-cart {
+.container-icon {
   position: absolute;
-  top: 10%;
+  top: 20%;
   right: 5%;
   font-size: 1.5rem;
+}
+
+.shopping-cart {
+  font-size: 2rem;
+}
+
+.count-products {
+  position: absolute;
+  top: -55%;
+  right: 10%;
+  background-color: #ff6e6c;
+  color: #000;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+#contador-productos {
+  font-size: 15px;
+}
+
+.container-cart-products {
+  position: absolute;
+  top: 50px;
+  right: 0;
+  background-color: #fff;
+  width: 400px;
+  z-index: 1;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+.cart-product {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.info-cart-product {
+  display: flex;
+  justify-content: space-between;
+  flex: 0.8;
+}
+
+.cantidad-producto-carrito {
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.titulo-producto-carrito {
+  font-size: 20px;
+}
+
+.precio-producto-carrito {
+  font-weight: 700;
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.icon-close {
+  width: 25px;
+  height: 25px;
+}
+
+.cart-total {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
+  gap: 20px;
+}
+
+.cart-total h3 {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.total-pagar {
+  font-size: 20px;
+  font-weight: 900;
+}
+
+.cart-empty {
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.hidden {
+  display: none;
+}
+
+.hidden-cart {
+  display: none;
 }
 
 .header {
