--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
-  max-width: 360px;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -30,12 +29,12 @@
   color: white;
   text-decoration: none;
 }
-/* @media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) {
   .shop-link {
     color: white;
     text-decoration: none;
   }
-} */
+}
 
 :root {
   font-size: 16px;
